# django_htmx_rest

./: CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  tox.ini
.github/workflows/: black.yml  ci.yml  main.yml
src/htmx_rest/: apps.py  decorators.py  negotiator.py  renderers.py  response.py  settings.py  util.py
src/htmx_rest/tests/: __init__.py  fixtures.py  settings.py  test_negotiator.py  test_renderers.py  test_response.py  test_util.py
src/htmx_rest/tests/templates/tests/: partial.html
