[metadata]
name = django-htmx-rest
version = 0.0.1
author = Jack DeVries
author_email = jdevries3133@gmail.com
description = Bringing together django, django rest framework, and htmx
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jdevries3133/django_htmx_rest
project_urls =
    Bug Tracker = https://github.com/jdevries3133/django_htmx_rest/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
